fixing overflowed images in screenshots section

--- a/css/style.less
+++ b/css/style.less
@@ -546,17 +546,19 @@ main {
             left: auto;
             margin-top: 75px;
             margin-right: 90px;
-
-
-            // display: flex;
-            display: none;
-            transition: transform 350ms ease-in-out;
-            width: 232px;
-            // overflow: hidden;
+            overflow: hidden;
 
             div {
                 width: 100%;
 
+            }
+
+            .wrapper_screenshot_imgs {
+                display: flex;
+                // display: none;
+                flex-wrap: nowrap;
+                transition: transform 350ms ease-in-out;
+                width: 232px;
             }
 
 
